# pokemon-wordle-solver

./: Cargo.toml  README.md
docs/: index.html
docs/js/: app.js  const.js
outputs/: opt_BW.json  opt_BW.txt  opt_DP.json  opt_SM.json  opt_SM.txt  opt_SWSH.json  opt_SWSH.txt  opt_XY.json  opt_XY.txt  opt_n=644(BW).txt  opt_n=710(XY).json  opt_n=710(XY).txt  opt_n=779(SM).json  opt_n=779(SM).txt  tree_ans=DP_guess=剣盾.json  tree_ans=DP_guess=剣盾.txt
src/: consts.rs  judge.rs  lib.rs  main.rs  pokemon.rs  tree.rs
