[package]
name = "wordle-pokemon"
version = "0.1.0"
authors = ["Keigo Habara <k.habara.aa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
ordered-float = "2.0"
rayon = "1.5"
pprof = { version = "0.4", features = ["protobuf"] }
